# PhysicalDice

./: Cargo.toml  README.md
libpdice/: Cargo.toml
libpdice/src/: lib.rs
src/: main.rs
