[package]
name = "roll"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["libpdice"]
resolver = "2"

[package.metadata.deb]
assets = ["target/release/roll", "usr/bin/", "755"]

[profile.release]
panic = "abort"
debug = 1
overflow-checks = true
lto = "thin"
opt-level = 3

[dependencies]
libpdice = { path = "./libpdice" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
