[package]
name = "roll"
version = "0.2.0"
edition = "2024"

[workspace]
members = ["libpdice"]
resolver = "2"

[package.metadata.deb]
assets = ["$auto"]
depends = "$auto"

[profile.release]
panic = "abort"
debug = 1
overflow-checks = true
lto = "thin"
opt-level = 3

[dependencies]
libpdice = { path = "./libpdice" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
num_cpus = "1.16"
